wite wrap issue fixed

--- a/src/shared/modules/header/sub/sub.component.scss
+++ b/src/shared/modules/header/sub/sub.component.scss
@@ -43,7 +43,7 @@
       align-items: center;
       width: 100%;
       li {
-        width: auto;
+        white-space: nowrap;
       }
     }
   }
